Rename launch profiles to match Rider config

--- a/JumboToRolls.API/Properties/launchSettings.json
+++ b/JumboToRolls.API/Properties/launchSettings.json
@@ -9,7 +9,7 @@
     }
   },
   "profiles": {
-    "http": {
+    "JumboToRoll.API: http": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
@@ -19,7 +19,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "https": {
+    "JumboToRoll.API: https": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
